parser/tests/snapshots/type_annotation__tests__basic.snap
---
source: parser/tests/type_annotation.rs
expression: "(tokens, parsed)"
---
(
    [
        Litteral(
            "var",
        ),
        Space,
        Litteral(
            "const",
        ),
        Space,
        Litteral(
            "name",
        ),
        Colon,
        Space,
        Litteral(
            "int",
        ),
        Space,
        Equal,
        Space,
        Numeric(
            [
                5,
            ],
        ),
        Bang,
        EOF,
    ],
    Ok(
        AssignmentExpression {
            outer_mutability: true,
            inner_mutability: false,
            global: false,
            global_mutability: false,
            name: "name",
            _type: Int,
            value: Litteral(
                Int(
                    5,
                ),
            ),
        },
    ),
)
